[package]
name = "checkengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version="2.0.0", features = ["postgres", "r2d2", "chrono"]}
dotenvy = "0.15"
actix-web-httpauth = "0.8"
chrono = "0.4"
r2d2 = "0.8.10"