[package]
name = "checkengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version="2.0.0", features = ["postgres", "r2d2", "chrono"]}
dotenvy = "0.15"
actix-web-httpauth = "0.8"
chrono = {version="0.4", features=["serde"]}
r2d2 = "0.8.10"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.64"
env_logger = "0.10.0"
ring = "0.16"
base64 = "0.20"
jsonwebtoken = "8.2.0"
derive_more = "0.99"
actix-jwt-auth-middleware = "0.2.0"
futures = "0.3"